Fixes NavBar Overlap

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body{
     position: sticky;
     top : 0;
     /* width: 100%; */
+    z-index: 10000;
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -397,7 +398,6 @@ body{
 .ld:hover{
     height: 90px;
 }
-
 
 
 
